First working implementation of genetic-algo, the horrible evolver of chromosomes

--- a/genetic-algo.fsproj
+++ b/genetic-algo.fsproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Individual.fs" />
+    <Compile Include="Logic.fs" />
+    <Compile Include="Algorithm.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
